--- a/apps.json
+++ b/apps.json
@@ -191,14 +191,14 @@
       ]
     },
     { 
-      "name": "Spotify++",
+      "name": "Eevee Spotify",
       "bundleIdentifier": "com.spotify.client",
-      "developerName": "JulioVerne",
-      "subtitle": "Spotify with free premium.",
-      "version": "8.5.7",
+      "developerName": "MySign",
+      "subtitle": "Spotify with no ads.",
+      "version": "8.9.94",
       "versionDate": "2019-06-28T14:30:00-07:00",
-      "versionDescription": "Bug fixes.",
-      "downloadURL": "https://dl.orangedox.com/PandaApp/12?dl=1",
+      "versionDescription": "Updated to the latest Eevee Spotify Tweak",
+      "downloadURL": "https://storage.omnidev.org/Eevee_Spotify_8_9_94_Widget_Working-AR.ipa",
       "localizedDescription": "Spotify++ essentially activates spotify premium on your device with one exception: No downloads.\n\nSo what does Spotify++ change?\n\n• All kinds of ads removed\n• Unlimited skips\n• Play any song or album\n• Enable extreme streaming quality\n• No forced shuffle\n• Import songs from the Music app",
       "iconURL": "https://i.pinimg.com/originals/35/87/f8/3587f8e9df02e2990b93afb9cd6d2323.jpg",
       "tintColor": "32CD32",
@@ -261,15 +261,15 @@
       ]
     },
     {
-      "name": "Reddit++",
-      "bundleIdentifier": "com.reddit.Reddit",
+      "name": "Apollo for Reddit",
+      "bundleIdentifier": "com.reddit.reddit",
       "developerName": "syto203",
-      "subtitle": "Find your community",
-      "version": "2020.12.0",
-      "versionDate": "2020-04-05T14:00:00-08:00",
-      "versionDescription": "• Minor fixes and improvements\nPreviously in 2020.12.0\n• Design Update: Now you’ll see a loading spinner at the bottom of the Communities tab until all the communities and content have been fetched.\n• Bug Fix: Returning to RPAN after visiting a community won’t freeze the app anymore.\n• Minor fixes and improvements—In an effort to be more transparent, we’ll admit that we only put this here in case we forgot something",
-      "downloadURL": "https://dl.orangedox.com/PandaApp/11?dl=1",
-      "localizedDescription": "This tweaked version allows the user to view deleted posts retrieved by pushshift.io. and removes Ads.",
+      "subtitle": "Reddit but better",
+      "version": "1.15.11,
+      "versionDate": "2024-11-29",
+      "versionDescription": "Actually works now",
+      "downloadURL": "https://storage.omnidev.org/Apollo_1_15_11_improvedcustomapi_1_1_7b-DT.ipa",
+      "localizedDescription": "Reddit but better.",
       "iconURL": "https://www.marnet.ru/wp-content/uploads/2018/05/Reddit.png",
       "tintColor": "FF6347",
       "size": 55538241,
@@ -280,29 +280,6 @@
         "https://is2-ssl.mzstatic.com/image/thumb/Purple124/v4/94/f0/21/94f02116-9495-22f3-d723-b1a6424e5587/pr_source.png/1000x1000bb.png",
         "https://is4-ssl.mzstatic.com/image/thumb/Purple124/v4/56/16/4d/56164d88-5e13-e4e2-e78c-4d026c8091f1/pr_source.png/1000x1000bb.png",
         "https://is1-ssl.mzstatic.com/image/thumb/Purple114/v4/dc/0e/bc/dc0ebc27-5b27-0187-6e42-da4ee39336e9/pr_source.png/1000x1000bb.png"
-      ]
-    },
-    {
-      "name": "Spotify++",
-      "bundleIdentifier": "com.apple.spotify2",
-      "developerName": "JulioVerne",
-      "subtitle": "👇🏻 Read the description 👇🏻",
-      "version": "8.5.53",
-      "versionDate": "2020-04-19T10:30:00-07:00",
-      "versionDescription": "- Fixed stability issues.",
-      "downloadURL": "https://dl.orangedox.com/PandaApp/13?dl=1",
-      "localizedDescription": "When you try to play an album, you cannot select individual songs to play. You can only choose shuffle play. \n\nThe last fully working version is 8.5.7. Which you can download below.",
-      "iconURL": "https://i.pinimg.com/originals/35/87/f8/3587f8e9df02e2990b93afb9cd6d2323.jpg",
-      "tintColor": "23d060",
-      "size": 48930456,
-      "beta": true,
-      "screenshotURLs": [
-        "https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/de/e0/4a/dee04ac9-26b3-7e4e-9827-c0fba18911f1/pr_source.png/1000x1000bb.png",
-	"https://is5-ssl.mzstatic.com/image/thumb/Purple113/v4/ff/a7/ac/ffa7aca0-a1ca-6e11-b989-babb7fa76aec/pr_source.png/1000x1000bb.png",
-	"https://is4-ssl.mzstatic.com/image/thumb/Purple123/v4/09/ec/b4/09ecb452-446d-b6d3-f1a8-1d6e41d41813/pr_source.png/1000x1000bb.png",
-	"https://is4-ssl.mzstatic.com/image/thumb/Purple123/v4/13/88/08/138808c9-0ba8-ba9a-cbc2-860cf9dbeece/pr_source.png/1000x1000bb.png",
-	"https://is5-ssl.mzstatic.com/image/thumb/Purple113/v4/af/a3/a3/afa3a359-7417-d4df-0d5a-ab0eda164aa7/pr_source.png/1000x1000bb.png",
-	"https://is5-ssl.mzstatic.com/image/thumb/Purple123/v4/c3/38/75/c338754e-605b-d973-77fd-75df463af5fa/pr_source.png/1000x1000bb.png"
       ]
     },
     { 
@@ -425,179 +402,5 @@
       ]
     }
   ],
-  "news": [
-    {
-      "title": "The last fully working version is 8.5.7",
-      "identifier": "spotify++-available-now",
-      "caption": "Premium spotify, available for free.",
-      "tintColor": "228B22",
-      "imageURL": "https://techlacarte.com/wp-content/uploads/2019/07/Get-Spotify-Premium-for-Free.jpg",
-      "appID": "com.spotify.client",
-      "date": "2020-04-13",
-      "notify": false
-    },
-    {
-      "title": "InShot++\nnow on AltStore!",
-      "identifier": "InShot++-now-available",
-      "caption": "Unlocked Pro",
-      "tintColor": "CD5C5C",
-      "imageURL": "https://modapkdl.io/wp-content/uploads/2019/12/InShot-Pro-download-for-Android.jpg",
-      "appID": "com.camerasideas.InstaShot",
-      "date": "2020-04-03",
-      "notify": false
-    },
-    {
-      "title": "🚀 Rocket for Instagram",
-      "identifier": "Instagram++-available-now",
-      "caption": "All-in-one tweak for Instagram app users and NoAds!",
-      "tintColor": "b500d6",
-      "imageURL": "https://greepx.com/wp-content/uploads/2019/11/1573938237_665_instagram-wallpapers.png",
-      "appID": "com.instagram.apprefresh",
-      "date": "2020-04-01",
-      "notify": false
-    },
-    {
-      "title": "Cercube 5 for YouTube",
-      "identifier": "YouTube++-available-now",
-      "caption": "Could be categorized as a YouTube user’s dream tweak.",
-      "tintColor": "FF4500",
-      "imageURL": "https://cdn02.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_switch_download_software_1/H2x1_NSwitchDS_YouTube.jpg",
-      "appID": "com.google.ios.youtube",
-      "date": "2020-04-12",
-      "notify": false
-    },
-    {
-      "title": "Deezer++ Now Available!",
-      "identifier": "Deezer++-now-available",
-      "caption": "Unlocked all premium features!",
-      "tintColor": "232323",
-      "imageURL": "https://www.windowslatest.com/wp-content/uploads/2016/08/Deezer-Music-Logo.png",
-      "appID": "com.deezer.Deezer",
-      "date": "2020-04-01",
-      "notify": false
-    },
-    {
-       "title": "Channels now available on AltStore!",
-       "identifier": "channels-x-altstore",
-       "caption": "Live TV you're used to, better.",
-       "tintColor": "0093E9",
-       "imageURL": "https://raw.githubusercontent.com/FurkanSimsir/channels.github.io/master/banner.png",
-       "appID": "com.channelsapp.channels",
-       "date": "2020-03-25",
-       "notify": true
-    },
-    {
-      "title": "VK — social network",
-      "identifier": "VK++-now-available",
-      "caption": "VK++ с огромным количеством дополнительных настроек.",
-      "tintColor": "1E90FF",
-      "imageURL": "https://direktorinterneta.com/wp-content/uploads/2017/12/G6dTqBmefc.jpg",
-      "appID": "com.vk.vkclient.vkm.refresh",
-      "date": "2020-03-28",
-      "beta": true
-    },
-    {
-      "title": "Mini Metro",
-      "identifier": "Mini Metro-now-available",
-      "caption": "Build a better subway",
-      "tintColor": "6592be",
-      "imageURL": "https://cdn02.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_switch_download_software_1/H2x1_NSwitchDS_MiniMetro_image1600w.jpg",
-      "appID": "com.apple.compilers.l2vm.clang.1_0",
-      "date": "2020-04-14",
-      "notify": false
-    },
-    {
-      "title": "Twitter++ Now Available!",
-      "identifier": "Twitter++-now-available",
-      "caption": "Get unlimited feature on Twitter",
-      "tintColor": "00adef",
-      "imageURL": "https://www.xda-developers.com/files/2017/10/twitter.png",
-      "appID": "com.atebits.Tweetie2",
-      "date": "2020-04-17",
-      "notify": false
-    },
-    {
-      "title": "Twitch — Live Game Streaming",
-      "identifier": "Twitch++-now-available",
-      "caption": "No Video Ads On Twitch",
-      "tintColor": "4169E1",
-      "imageURL": "https://static.feber.se/article_images/48/13/68/481368.jpg",
-      "appID": "com.apple.compilers.llvm.clang.1_0",
-      "date": "2020-03-24",
-      "notify": false
-    },
-    {
-      "title": "OrNET - Private Onion Browser",
-      "identifier": "tor-now-available",
-      "caption": "Enabled Premium Features And VPN.",
-      "tintColor": "9370DB",
-      "imageURL": "https://miro.medium.com/max/3840/1*TAWZrQWAMZLDrlZ35nomhw.jpeg",
-      "appID": "pironlabs.torbrowser.syto203",
-      "date": "2020-03-26",
-      "notify": false
-    },
-    {
-      "title": "Unfold++ — Story Templates",
-      "identifier": "Unfold++-available-now",
-      "caption": "Create beautiful and engaging\nstories from minimal and elegant templates",
-      "tintColor": "b9cee4",
-      "imageURL": "https://i1.wp.com/www.appsmedian.com/wp-content/uploads/2019/01/descargar-unfold-create-stories-1.jpg",
-      "appID": "com.lightricks.Enlight-Video",
-      "date": "2020-03-24",
-      "notify": false
-    },
-    {
-       "title": "Chimera now available on AltStore!",
-       "identifier": "chimera-x-altstore",
-       "caption": "Your device, your way..",
-       "tintColor": "B8CDCF",
-       "imageURL": "https://i.ytimg.com/vi/mTfFFEXdNJg/maxresdefault.jpg",
-       "appID": "com.electrateam.chimera",
-       "date": "2020-03-25",
-       "notify": true
-    },
-    {
-      "title": "iTorrent Now Available",
-      "identifier": "itorrent-available-download",
-      "caption": "Simple and straightforward torrenting for iOS.",
-      "tintColor": "e32b3c",
-      "imageURL": "https://telegra.ph/file/f649e262685980980998c.jpg",
-      "appID": "ru.nonamedude.iTorrent",
-      "date": "2020-03-24",
-      "notify": false
-    },
-    {
-      "title": "Reddit++\nnow on AltStore!",
-      "identifier": "Reddit++-now-available",
-      "caption": "Find your community",
-      "tintColor": "FF7F50",
-      "imageURL": "https://hacktalk.net/wp-content/uploads/2018/08/reddit-combo-1920.png",
-      "appID": "com.reddit.Reddit",
-      "date": "2020-04-16",
-      "notify": false
-    },
-    {
-      "title": "Exclusive latest version 8.5.53!",
-      "identifier": "spotify-available-now",
-      "caption": "Flaw of only allowing shuffle play.",
-      "tintColor": "43BF4B",
-      "imageURL": "https://www.xda-developers.com/files/2019/07/spotify-lite.jpg",
-      "appID": "com.apple.spotify2",
-      "date": "2020-04-18",
-      "beta": true
-    },
-    {
-      "title": "unc0ver out now!",
-      "identifier": "uncover-available-download",
-      "caption": "The most advanced jailbreak tool yet. Tap to download.",
-      "tintColor": "101216",
-      "imageURL": "https://quarklibrary.imfast.io/unc0ver/news.png",
-      "appID": "science.xnu.undecimus",
-      "date": "2020-03-27",
-      "notify": false
-    }
-  ],
-  "userInfo": {
-
   }
 }
